Change the type of Long